fix header and add team-section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,6 +33,7 @@
         "scss/section/header.scss",
         "scss/section/natural.scss",
         "scss/section/best.scss",
+        "scss/section/team.scss",
         "scss/section/staff.scss"
       ]
     }
