--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,7 @@
         "scss/section/natural.scss",
         "scss/section/best.scss",
         "scss/section/team.scss",
+        "scss/section/menu.scss",
         "scss/section/staff.scss"
       ]
     }
