--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,7 +35,9 @@
         "scss/section/best.scss",
         "scss/section/team.scss",
         "scss/section/menu.scss",
-        "scss/section/staff.scss"
+        "scss/section/staff.scss",
+        "scss/section/map.scss",
+        "scss/section/footer.scss"
       ]
     }
   ],
