--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,6 +36,7 @@
         "scss/section/team.scss",
         "scss/section/menu.scss",
         "scss/section/staff.scss",
+        "scss/section/delivery.scss",
         "scss/section/map.scss",
         "scss/section/footer.scss"
       ]
