adaptive design for tablets

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,6 +25,7 @@
       "imports": [
         "scss/config/mixins.scss",
         "scss/config/variables.scss",
+        "scss/config/media.scss",
         "scss/layout/font.scss",
         "scss/layout/base.scss",
         "scss/layout/adjustment.scss",
