--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,6 +33,7 @@
         "scss/layout/bot-scroll.scss",
         "scss/section/header.scss",
         "scss/section/natural.scss",
+        "scss/section/burger-info.scss",
         "scss/section/best.scss",
         "scss/section/team.scss",
         "scss/section/menu.scss",
