--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,6 +31,7 @@
         "scss/layout/adjustment.scss",
         "scss/layout/side-nav.scss",
         "scss/layout/bot-scroll.scss",
+        "scss/layout/onepage-scroll.scss",
         "scss/section/header.scss",
         "scss/section/natural.scss",
         "scss/section/natural-menu.scss",
